# tiny_vectordb

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.txt  setup.py  test.py  test_io.py  test_io2.py  test_speed.py
tests/: _test_speed.py  run.sh  test.py  test_0.py  test_encoding.py  test_impl.py  test_io.py  test_io2.py  test_speed.py
tiny_vectordb/: __init__.py  config.py  diskio.py  jit.py  jit_utils.py  numpy_impl.py  vecdbImpl.cpp  vector_collection.py  wrap.py
tiny_vectordb/include/: b64enc.h  common.h  diskIO.h  searchAlgorithm.h  searchAlgorithm.hpp  vecdbImpl.h  vecdb_common.h
tiny_vectordb/src/: b64enc.cpp  diskIO.cpp  searchAlgorithm.cpp  vecdbImpl.cpp
