[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project.urls]
"Homepage" = "https://github.com/MenxLi/tiny_vectordb"
"Bug Tracker" = "https://github.com/MenxLi/tiny_vectordb/issues"

[project]
name = "tiny_vectordb"
version = "0.1.0"
authors = [
  { name="Li, Mengxun", email="mengxunli@whu.edu.cn" },
]
description = "A tiny vector database for python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
dependencies = [
    "pybind11",
    "ninja"
]
