[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/MenxLi/tiny_vectordb"
"Bug Tracker" = "https://github.com/MenxLi/tiny_vectordb/issues"

[project]
name = "tiny_vectordb"
version = "0.1.11"
authors = [
  { name="Li, Mengxun", email="mengxunli@whu.edu.cn" },
]
description = "A tiny jit vector database with minimal dependencies and maximum performance."
readme = "README.md"
requires-python = ">=3.9"     # PEP 585
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
dependencies = [
    "pybind11",
    "ninja"
]
